# yvm-rs

./: Cargo.toml  README.md
crates/yvm-builds/: Cargo.toml  build.rs
crates/yvm-builds/src/: lib.rs
crates/yvm-rs/: Cargo.toml
crates/yvm-rs/list/arm/: list.json
crates/yvm-rs/list/x86/: list.json
crates/yvm-rs/src/: error.rs  lib.rs  releases.rs
